8234262: Unmask the SIGQUIT in a child process Clear the signal mask of the child when launching with posix_spawn.